@@ -2,6 +2,8 @@ DEVELOPER_HOME=~/Developer
 echo DEVELOPER_HOME=$DEVELOPER_HOME
 FLASH_PLAYER_COMMAND="$DEVELOPER_HOME/tools/Flash Player.app/Contents/MacOS/Flash Player"
 echo FLASH_PLAYER_COMMAND=$FLASH_PLAYER_COMMAND
+MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
+echo MAVEN_OPTS=$MAVEN_OPTS
 
 cd ../frameworks/source/
 mvn -f alkhwarizmix-common.pom.xml clean install
@@ -11,4 +13,4 @@ cd alkhwarizmixFlexFramework
 mvn clean install -Dflex.flashPlayer.command="$FLASH_PLAYER_COMMAND"
 
 cd ../../../../alkhwarizmix/moqawalati/source
-mvn clean install -Dflex.flashPlayer.command="$FLASH_PLAYER_COMMAND"
+mvn clean cobertura:cobertura install -Dflex.flashPlayer.command="$FLASH_PLAYER_COMMAND"
